--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">My First App</string>
-    <string name="edit_message">Enter a message</string>
-    <string name="button_send">Send</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">Advertisements</string>
+    <string name="button_google_mobile_leaderboard">Google Mobile leaderboard</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_display_message">My Message</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="some_application">Some application here</string>
+    
+    <string name="action_settings">Settings</string>
     <string name="action_search">Search</string>
 
     <!-- This is an ad unit ID for a test ad. Replace with your own banner ad unit id. -->
