Checkboxes were added

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,11 @@
 <resources>
 
     <string name="app_name">Advertisements</string>
+    
+    <string name="checkbox_lb">Leaderboard</string>
+    <string name="checkbox_mr">Medium rectangle</string>
     <string name="button_google_mobile_leaderboard">Google Mobile leaderboard</string>
+    
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_display_message">My Message</string>
     <string name="some_application">Some application here</string>
