Interstitical was added

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">Advertisements</string>
     
+    <string name="load_interstitial">Load Interstitial</string>
     <string name="checkbox_lb">Leaderboard</string>
     <string name="checkbox_mr">Medium rectangle</string>
     <string name="button_google_mobile_leaderboard">Google Mobile leaderboard</string>
